--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marina Prisnyak</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +17,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Marina Prisnyak</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -36,10 +36,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#contact">Contact me</a>
@@ -48,34 +50,74 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from Vinnitsya, Ukraine</h3>
-    <div class="about-paragraphs text-center">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
+    <h2 class="text-center">👋 Hi I am</h2>
+    <h1 class="text-center">Marina Prisnyak</h1>
+    <h3 class="text-center">🇺🇦 Front-end developer, based in Ukraine</h3>
+    <div class="navigation-links mb-5">
+      <a href="about.html#contact" class="primary-link">Contact me</a>
+      <a href="about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
-          <img src="images/book.png" class="img-fluid p-2 shadow rounded" />
+        <div class="col-md-6">
+          <img src="images/book.png" class="img-fluid rounded" />
         </div>
-        <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
-        </div>
-        <div class="col-sm-4">
-          <img src="images/vdoma.png" class="img-fluid p-2 shadow rounded" />
+        <div class="col-md-6">
+          <h2 class="mb-3">BOOK app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="https://ambitna.com.ua/riznibozhinku/" class="primary-link"
+              >Launch Book App</a
+            >
+          </div>
         </div>
       </div>
-    </div>
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:m.prisnyak@gmail.com" class="email-link">
-        m.prisnyak@gmail.com
-      </a>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <img src="images/weather.png" class="img-fluid rounded" />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-3">WEATHER app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+        </div>
+        <div class="mb-5 mt-5">
+          <a href="https://ambitna.netlify.app/" class="primary-link"
+            >Launch Weather App</a
+          >
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <img src="images/vdoma.png" class="img-fluid rounded" />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-3">VDOMA app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a
+              href="https://ambitna.com.ua/category/vdoma/"
+              class="primary-link"
+              >Launch Vdoma App</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
