--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="This site is about Marina Prisnyak and her skills" />
     <title>Marina Prisnyak</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/book.png" class="img-fluid rounded" />
+          <img src="images/book.png" class="img-fluid rounded" alt="Book about women"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">BOOK app</h2>
@@ -71,7 +71,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="https://ambitna.com.ua/riznibozhinku/" class="primary-link"
+            <a href="https://ambitna.com.ua/riznibozhinku/" class="primary-link" title="Book about women"
               >Launch Book App</a
             >
           </div>
@@ -79,7 +79,7 @@
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather.png" class="img-fluid rounded" alt="Weather App by Marina Prisnyak"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">WEATHER app</h2>
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="mb-5 mt-5">
-          <a href="https://ambitna.netlify.app/" class="primary-link"
+          <a href="https://ambitna.netlify.app/" class="primary-link" title="Launch Weather App"
             >Launch Weather App</a
           >
         </div>
@@ -99,7 +99,7 @@
 
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/vdoma.png" class="img-fluid rounded" />
+          <img src="images/vdoma.png" class="img-fluid rounded" alt="The project about ukrainian women by Marina Prisnyak"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">VDOMA app</h2>
@@ -111,7 +111,7 @@
           </p>
           <div class="mt-5">
             <a
-              href="https://ambitna.com.ua/category/vdoma/"
+              href="https://ambitna.com.ua/category/vdoma/" title="The project about ukrainian women by Marina Prisnyak"
               class="primary-link"
               >Launch Vdoma App</a
             >
