--- a/about.html
+++ b/about.html
@@ -61,13 +61,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/book.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/book.png" class="img-fluid p-2 shadow rounded" alt="Book about women" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="Weather App by Marina Prisnyak"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/vdoma.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/vdoma.png" class="img-fluid p-2 shadow rounded" alt="The project about ukrainian women by Marina Prisnyak" />
         </div>
       </div>
     </div>
