--- a/index.html
+++ b/index.html
@@ -19,105 +19,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Marina Prisnyak</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Marina Prisnyak</h1>
-    <h3 class="text-center">🇺🇦 Front-end developer, based in Ukraine</h3>
-    <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/book.png" class="img-fluid rounded" alt="Book about women"/>
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">BOOK app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="https://ambitna.com.ua/riznibozhinku/" class="primary-link" title="Book about women"
-              >Launch Book App</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" alt="Weather App by Marina Prisnyak"/>
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">WEATHER app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-        </div>
-        <div class="mb-5 mt-5">
-          <a href="https://ambitna.netlify.app/" class="primary-link" title="Launch Weather App"
-            >Launch Weather App</a
-          >
-        </div>
-      </div>
+   <div class="hero-page">
 
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img src="images/vdoma.png" class="img-fluid rounded" alt="The project about ukrainian women by Marina Prisnyak"/>
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">VDOMA app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a
-              href="https://ambitna.com.ua/category/vdoma/" title="The project about ukrainian women by Marina Prisnyak"
-              class="primary-link"
-              >Launch Vdoma App</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
+   </div>
   </body>
 </html>
