--- a/index.html
+++ b/index.html
@@ -5,22 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="This site is about Marina Prisnyak and her skills" />
     <title>Marina Prisnyak</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
+   <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+   
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
    <div class="hero-page">
-Hello
+
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+      
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="Logo" width="70px"  class="d-inline-block align-text-top">
+          </a>
+       
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">about </a>
+            <a class="nav-link" href="#">projects</a>
+            <a class="nav-link disabled">contact me </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <div class="hero">
+<h2>
+  Hello, I am
+</h2>
+<h1>
+  Marina Prisnyak
+</h1>
+<h3>
+  Front-End Developer from Ukraine 🇺🇦
+</h3>
+<a href="#" class="btn btn-branding">Contacts me</a>
    </div>
+  </div>
   </body>
 </html>
