--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   <div class="hero-page">
+   <div class="hero-page m-3">
 
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
