--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    </div>
 <div class="container mb-5">
   <div class="row">
-    <div class="col">
+    <div class="col d-none d-lg-block">
 <img src="images/me.png" class="img-fluid" alt="Marina Prisnyak"/>
     </div>
     <div class="col mb-5">
@@ -94,7 +94,7 @@
                 </p>
               </div>
             </div>
-            <div class="col">
+            <div class="col d-none d-lg-block">
               <img src="images/weather.png" class="img-fluid" alt="" />
             </div>
           </div>
