--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
    <div class="hero-page m-3 text-center">
     <div class="container">
     <nav class="navbar navbar-expand-lg >
-      <div class="container-fluid">
+      <div class='container-fluid'  >
       
           <a class="navbar-brand" href="#">
-            <img src="images/logo.png" alt="Logo" width="70px"  class="d-inline-block align-text-top">
+            <img class="content__rotate" src="images/logo.png" alt="Logo" width="70px"  class="d-inline-block align-text-top">
           </a>
        
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -106,6 +106,7 @@ Mail: m.prisnyak@gmail.com</br>
 Phone: +38 067 74 057 64</br></h3>
 </div>
 </div>
+
 
   </div>
   </body>
