--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     
     <div class="col mb-5">
-      <h2 class="header m-5">About me</h2>
+      <h2 class="header"> About me</h2>
       <p>{Віддам себе в бережні та вимогливі руки на посаду Trainee Frontend Developer. Обіцяю багато працювати, бути посидючою, уважною і результативною.
         Навчаюсь в shecodes. Уже вмію працювати з HTML, CSS, VS Code Editor, GitHub, Bootstra , Hosting ,Flexbox ,SEO , Responsive, API}
     </p>    
