--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
         </div>
 
-<div class="connect-me text-center mb-5">
+<div class="connect-me mb-5">
   <h3>Let's connect: </h3>
   <p>
 Telegram: https://t.me/marina_prr</br>
