--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
         </div>
 
 <div class="connect-me mb-5">
-  <h3>Let's connect: </h3>
-  <p>
-Telegram: https://t.me/marina_prr</br>
+  <h2 class="header">Let's connect: </h2>
+  <h3> Telegram: https://t.me/marina_prr</br>
 Mail: m.prisnyak@gmail.com</br>
-Phone: +38 067 74 057 64</br></p>
+Phone: +38 067 74 057 64</br></h3>
 </div>
+
 </div>
 
 
