--- a/index.html
+++ b/index.html
@@ -112,16 +112,38 @@
           </div>
         </div>
 
-<div class="connect-me mb-5">
-  <h2 class="header">Let's connect: </h2>
-  <h3> Telegram: https://t.me/marina_prr</br>
-Mail: m.prisnyak@gmail.com</br>
-Phone: +38 067 74 057 64</br></h3>
-</div>
+
 
 </div>
 
 
+<div class="container connect-me-rights text-right">
+  <div class="row">
+    <div class="col-2 star">
+      *
+    </div>
+    <div class="col-2"> </div>
+    <div class="col-4"></div>
+    <div class="col"> Telegram: https://t.me/marina_prr</br>
+
+      Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
+      Phone: +38 067 74 057 64</br>
+    </br>
+      <a href="https://github.com/ambitna/she3" alt="github.com"> Open-source code. SheCodes Responsive</a>
+    </div>
+  </div>
+</div>
+
+<div class="container connect-me-rights text-center pd-">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col pb-3">©2022 Marina Prisyak   /   All rights reserved</div>
+    <div class="col"> </div>
+  </div>
+</div>
+
+
+</div>
   </div>
   </body>
 </html>
