--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,9 @@
               </div>
               <div class="col-2"> </div>
               <div class="col-4"></div>
-              <div class="col" id="contact"> Telegram: https://t.me/marina_prr</br>
+              <div class="col" id="contact"> Telegram:
+                <a href="https://t.me/marina_prr"> @marina_prr </a>
+              </br>
 
                 Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
                 Phone: +38 067 74 057 64</br>
