--- a/about.html
+++ b/about.html
@@ -28,20 +28,16 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
 
-
           <a class="navbar-brand" href="#">
             <div class="d-inline-block align-text-top content__rotate">
             </div>
           </a>
-
-
-
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="index.html">home</a>
               <a class="nav-link" href="about.html">about </a>
               <a class="nav-link" href="projects.html">projects</a>
-              <a class="nav-link disabled" href="about.html#contact">contact me </a>
+              <a class="nav-link" href="contack.html">contact me </a>
               
             </div>
           </div>
@@ -56,7 +52,7 @@
         </div>
 
         <div class="col mb-5">
-          <h2 class="header"> About me</h2>
+          <h1 class="header"> About me</h1>
           <p>
             Training Manager (Methodist), Brand Marketer, Editor (Typewriter), Systematizer. I describe the meanings and
             results, independently visualizing it graphically or through code. I make the hard work of the team and the
@@ -78,42 +74,36 @@
 
     </div>
 
-
-
-
-  
-
-
   <div class="container connect-me-rights text-right">
-    <div class="row">
-      <div class="col-2 star">
-        *
-      </div>
-      <div class="col-2"> </div>
-      <div class="col-4"></div>
-      <div class="col" id="contact"> Telegram:
-        <a href="https://t.me/marina_prr"> @marina_prr </a>
-      </br>
+      <div class="row">
+          <div class="col-2 star">
+              *
+          </div>
+          <div class="col-2"> </div>
+          <div class="col-4"></div>
+          <div class="col"> Telegram:
+              <a href="https://t.me/marina_prr"> @marina_prr </a>
+              </br>
 
-        Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
-        Phone: +38 067 74 057 64</br>
-        </br>
-        <a href="https://github.com/ambitna/she3" alt="github.com"> Open-source code. SheCodes Responsive</a>
+              Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
+              Phone: +38 067 74 057 64</br>
+              </br>
+              <a href="https://github.com/ambitna/she3" alt="github.com"> Open-source code. SheCodes
+                  Responsive</a>
+          </div>
       </div>
-    </div>
   </div>
 
   <div class="container connect-me-rights text-center pd-">
-    <div class="row">
-      <div class="col"></div>
-      <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
-      <div class="col"> </div>
-    </div>
-  </div>
+      <div class="row">
+          <div class="col"></div>
+          <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
+          <div class="col"> </div>
+      </div>
+   </div>
 
-
-  </div>
-  </div>
+   
+</div>
 
 </body>
 
