--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">home</a>
               <a class="nav-link" href="about.html">about </a>
               <a class="nav-link" href="projects.html">projects</a>
-              <a class="nav-link disabled" href="index.html#contact">  contact me </a>
+              <a class="nav-link" href="contack.html">  contact me </a>
             </div>
           </div>
         </div>
@@ -93,7 +93,9 @@
       </div>
       <div class="col-2"> </div>
       <div class="col-4"></div>
-      <div class="col contact"> Telegram: https://t.me/marina_prr</br>
+      <div class="col" id="contact"> Telegram:
+        <a href="https://t.me/marina_prr"> @marina_prr </a>
+      </br>
 
         Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
         Phone: +38 067 74 057 64</br>
