--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,9 @@
               <a class="nav-link active" aria-current="page" href="index.html">home</a>
               <a class="nav-link" href="about.html">about </a>
               <a class="nav-link" href="projects.html">projects</a>
-              <a class="nav-link disabled" href="projects.html#contact">contact me </a>
+              <a class="nav-link" href="contack.html">contact me </a>
+
+
             </div>
           </div>
         </div>
@@ -51,10 +53,10 @@
 
 
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5">
       <div class="row">
         <div class="col">
-          <h2 class="header">Weather App</h2>
+          <h1 class="header">Weather App</h1>
           <p>
             Take me to your team for the position of Trainee Frontend Developer. I promise to work hard, be diligent,
             attentive and productive. I study at Shecodes. I already know how to work with HTML, CSS, VS Code Editor,
@@ -68,26 +70,26 @@
           <img src="images/weather.png" class="img-fluid" alt="" />
         </div>
 
-        <div class="container mt-5 mb-5">
+      <div class="container mt-5">
           <div class="row">
             <div class="col d-none d-lg-block">
               <img src="images/book.png" class="img-fluid" alt="" />
             </div>
             <div class="col">
-              <h2 class="header">The Book</h2>
+              <h1 class="header">The Book</h1>
               <p>
                 I wrote a book about Ukrainian women. The project "#DifferentWomen" was created at the end of 2021.
                 The book was published in 2022, when there was a war in Ukraine.
               </p>
               <a href="https://ambitna.com.ua/riznibozhinku/" class="btn btn-branding-app m-5" target="_blank"
                 title="The book by Marina Prisnyak">The Book</a>
-            </div>
+          </div>
 
 
             <div class="container mt-5 mb-5">
               <div class="row">
                 <div class="col">
-                  <h2 class="header">Prisnyak Buro and Ambitna Media</h2>
+                  <h1 class="header">Prisnyak Buro and Ambitna Media</h1>
                   <p>
                     I am the founder of the reputation and marketing agency PRISNYAK BURO and the women's magazine Ambitna Pani. I have more than 10 years of experience in advertising, marketing and communications.
                   </p>
@@ -106,37 +108,39 @@
 
           </div>
 
-
           <div class="container connect-me-rights text-right">
             <div class="row">
-              <div class="col-2 star">
-                *
-              </div>
-              <div class="col-2"> </div>
-              <div class="col-4"></div>
-              <div class="col" id="contact"> Telegram:
-                <a href="https://t.me/marina_prr"> @marina_prr </a>
-              </br>
+                <div class="col-2 star">
+                    *
+                </div>
+                <div class="col-2"> 
+                </div>
+                <div class="col-4">
+                </div>
+                <div class="col"> 
+                  Telegram: <a href="https://t.me/marina_prr"> @marina_prr </a>
+                    </br>
 
-                Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
-                Phone: +38 067 74 057 64</br>
-                </br>
-                <a href="https://github.com/ambitna/she3" alt="github.com"> Open-source code. SheCodes Responsive</a>
-              </div>
+                    Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
+                    Phone: +38 067 74 057 64</br>
+                    </br>
+                    <a href="https://github.com/ambitna/she3" alt="github.com"> Open-source code. SheCodes
+                        Responsive</a>
+                </div>
             </div>
-          </div>
+         </div>
 
-          <div class="container connect-me-rights text-center pd-">
+        <div class="container connect-me-rights text-center pd-">
             <div class="row">
-              <div class="col"></div>
-              <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
-              <div class="col"> </div>
+                <div class="col"></div>
+                <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
+                <div class="col"> </div>
             </div>
-          </div>
-
-
         </div>
+      
       </div>
+    
+  </div>
 
 </body>
 
