--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
   <div class="hero-page m-3 text-center">
     <div class="container">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
 
           <a class="navbar-brand" href="#">
