--- a/index.html
+++ b/index.html
@@ -24,17 +24,14 @@
 <body>
 
   <div class="hero-page m-3 text-center">
+
     <div class="container">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
-
-
           <a class="navbar-brand" href="#">
             <div class="d-inline-block align-text-top content__rotate">
             </div>
           </a>
-
-
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
