--- a/projects.html
+++ b/projects.html
@@ -25,16 +25,13 @@
 
   <div class="hero-page m-3 text-center">
     <div class="container">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
-
 
           <a class="navbar-brand" href="#">
             <div class="d-inline-block align-text-top content__rotate">
             </div>
           </a>
-
-
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
@@ -49,7 +46,7 @@
         </div>
       </nav>
 
-    </div>
+
 
 
 
