--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="This site is about Marina Prisnyak and her skills" />
   <title>Marina Prisnyak</title>
+  <meta name="description"  content="This site developed by Marina Prisnyak. She is Trainee Developer. Marina Prisnyak is looking for conpany to work tere as a Trainee." />
+ 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -45,10 +47,10 @@
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">home</a>
-              <a class="nav-link" href="about.html">about </a>
-              <a class="nav-link" href="projects.html">projects</a>
-              <a class="nav-link" href="contack.html">  contact me </a>
+              <a class="nav-link" href="index.html" title="Prisnyak Marina develiper">home</a>
+              <a class="nav-link" href="about.html" title="Marina Prisnyak Website">about </a>
+              <a class="nav-link" href="projects.html" title="Projects by Marina Prisnyak">projects</a>
+              <a class="nav-link" href="contack.html" title="Marina Prisnyak Contacts">  contact me </a>
             </div>
           </div>
         </div>
