--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,9 @@
 </head>
 
 <body>
-
+  <div class="container"></div>
   <div class="hero-page m-3 text-center">
-    <div class="container">
+  
       <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
 
