--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 </script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="This site is about Marina Prisnyak and her skills" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Marina Prisnyak</title>
   <meta name="description"  content="This site developed by Marina Prisnyak. She is Trainee Developer. Marina Prisnyak is looking for conpany to work tere as a Trainee." />
  
@@ -35,7 +35,7 @@
 
 <body>
 
-  <div class="hero-page m-3 text-center">
+  <div class="hero-page text-center">
     <div class="container">
       <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
