--- a/contack.html
+++ b/contack.html
@@ -13,7 +13,7 @@
 </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="This site is about Marina Prisnyak and her skills" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Marina Prisnyak</title>
     <meta name="description"  content="This site developed by Marina Prisnyak. She is Trainee Developer. Marina Prisnyak is looking for conpany to work tere as a Trainee." />
  
@@ -35,31 +35,28 @@
 
 <body>
 
-    <div class="hero-page m-3 text-center">
+    <div class="hero-page text-center">
         <div class="container">
-            <nav class="navbar navbar-expand-sm">
-                <div class="container-fluid">
-
-
-                    <a class="navbar-brand" href="#">
-                        <div class="d-inline-block align-text-top content__rotate">
-                        </div>
-                    </a>
-
-
-
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link" href="index.html" title="Prisnyak Marina develiper">home</a>
-                            <a class="nav-link" href="about.html" title="Marina Prisnyak Website">about </a>
-                            <a class="nav-link" href="projects.html" title="Projects by Marina Prisnyak">projects</a>
-                            <a class="nav-link" href="contack.html" title="Marina Prisnyak Contacts">  contact me </a>
-                          </div>
+            <nav class="d-flex justify-content-between">
+                <a href="#" title="Homepage">
+                    <div class="content__rotate d-md-block ">
                     </div>
-                </div>
+              <ul>
+                <li class="active">
+                  <a href="index.html" title="Homepage"> home</a>
+                </li>
+                <li>
+                  <a href="about.html" title="About prisnyak"> about</a>
+                </li>
+                <li>
+                  <a href="projects.html" title="PMarina's work"> projects</a>
+                </li>
+                <li>
+                  <a href="contack.html" title="Contact Marina"> contact me</a>
+                </li>
+              </ul>
             </nav>
-
-        </div>
+          </div>
 
         <div class="container mt-5">
             <div class="row">
@@ -86,19 +83,12 @@
                     <h2>Instagram</h2>
                     <h3>
                         <a href="https://www.instagram.com/marina_prisnyak/" target="_blank">
-                            @marina_prisnyak
+                            @marina_prisnyak </a>
                         </h3>
                     </div>
                 </div>
             </div>
             </div>
-
-
-
-
-
-
-
             <div class="container connect-me-rights text-right">
                 <div class="row">
                     <div class="col-2 star">
@@ -109,7 +99,7 @@
                     <div class="col"> Telegram:
                         <a href="https://t.me/marina_prr"> @marina_prr </a>
                         </br>
-
+          
                         Mail: <a href="mailto:m.prisnyak@gmail.com"> m.prisnyak@gmail.com </a></br>
                         Phone: +38 067 74 057 64</br>
                         </br>
@@ -118,7 +108,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="container connect-me-rights text-center pd-">
                 <div class="row">
                     <div class="col"></div>
