--- a/projects.html
+++ b/projects.html
@@ -35,26 +35,28 @@
 
 <body>
 
-  <div class="hero-page text-center">
+  <div class="hero-page text-center projects">
     <div class="container">
-      <nav class="navbar navbar-expand-sm">
-        <div class="container-fluid">
-
-          <a class="navbar-brand" href="#">
-            <div class="d-inline-block align-text-top content__rotate">
-            </div>
-          </a>
-
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="index.html" title="Prisnyak Marina develiper">home</a>
-              <a class="nav-link" href="about.html" title="Marina Prisnyak Website">about </a>
-              <a class="nav-link" href="projects.html" title="Projects by Marina Prisnyak">projects</a>
-              <a class="nav-link" href="contack.html" title="Marina Prisnyak Contacts">  contact me </a>
-            </div>
+      <nav class="d-flex justify-content-between">
+        <a href="#" title="Homepage">
+          <div class="content__rotate d-md-block ">
           </div>
-        </div>
+        <ul>
+          <li class="active">
+            <a href="index.html" title="Homepage"> home</a>
+          </li>
+          <li>
+            <a href="about.html" title="About prisnyak"> about</a>
+          </li>
+          <li>
+            <a href="projects.html" title="PMarina's work"> projects</a>
+          </li>
+          <li>
+            <a href="contack.html" title="Contact Marina"> contact me</a>
+          </li>
+        </ul>
       </nav>
+    </div>
 
 
 
@@ -93,7 +95,7 @@
           </div>
 
 
-            <div class="container mt-5 mb-5">
+            <div class="container mt-5">
               <div class="row">
                 <div class="col">
                   <h1 class="header">Prisnyak Buro and Ambitna Media</h1>
@@ -103,11 +105,9 @@
                   <a href="https://ambitna.com.ua" class="btn btn-branding-app m-5" target="_blank"
                     title="Weather App by Marina Prisnyak">Go to Media</a>
                 </div>
-                <div class="col d-none d-lg-block">
+                <div class="col ">
                   <img src="images/ambitna.png" class="img-fluid" alt="" />
                 </div>
-
-
               </div>
             </div>
 
@@ -140,14 +140,15 @@
         <div class="container connect-me-rights text-center pd-">
             <div class="row">
                 <div class="col"></div>
-                <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
+                <div class="col pb-3">©2022 Marina Prisnyak / All rights reserved</div>
                 <div class="col"> </div>
             </div>
         </div>
       
-      </div>
+
     
-  </div>
+ 
+</div>
 
 </body>
 
