--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="This site is about Marina Prisnyak and her skills" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Marina Prisnyak</title>
   <meta name="description"  content="This site developed by Marina Prisnyak. She is Trainee Developer. Marina Prisnyak is looking for conpany to work tere as a Trainee." />
   <!-- CSS only -->
@@ -34,26 +34,27 @@
 
 <body>
 
-  <div class="hero-page m-3 text-center">
+  <div class="hero-page text-center">
     <div class="container">
-      <nav class="navbar navbar-expand-sm">
-        <div class="container-fluid">
-
-          <a class="navbar-brand" href="#">
-            <div class="d-inline-block align-text-top content__rotate">
-            </div>
-          </a>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="index.html" title="Prisnyak Marina develiper">home</a>
-              <a class="nav-link" href="about.html" title="Marina Prisnyak Website">about </a>
-              <a class="nav-link" href="projects.html" title="Projects by Marina Prisnyak">projects</a>
-              <a class="nav-link" href="contack.html" title="Marina Prisnyak Contacts">  contact me </a>
-            </div>
+      <nav class="d-flex justify-content-between">
+        <a href="#" title="Homepage">
+          <div class="content__rotate d-md-block ">
           </div>
-        </div>
+        <ul>
+          <li class="active">
+            <a href="index.html" title="Homepage"> home</a>
+          </li>
+          <li>
+            <a href="about.html" title="About prisnyak"> about</a>
+          </li>
+          <li>
+            <a href="projects.html" title="PMarina's work"> projects</a>
+          </li>
+          <li>
+            <a href="contack.html" title="Contact Marina"> contact me</a>
+          </li>
+        </ul>
       </nav>
-
     </div>
 
     <div class="container mt-5">
