--- a/index.html
+++ b/index.html
@@ -37,25 +37,37 @@
 <body>
 
   <div class="hero-page text-center">
-
     <div class="container">
-      <nav class="navbar navbar-expand-sm">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <div class="d-inline-block align-text-top content__rotate">
-            </div>
-          </a>
-
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="index.html" title="Prisnyak Marina develiper">home</a>
-              <a class="nav-link" href="about.html" title="Marina Prisnyak Website">about </a>
-              <a class="nav-link" href="projects.html" title="Projects by Marina Prisnyak">projects</a>
-              <a class="nav-link" href="contack.html" title="Marina Prisnyak Contacts"> contact me </a>
-            </div>
+      <nav class="d-flex justify-content-between">
+        <a href="#" title="Homepage">
+          <div class="content__rotate d-md-block ">
           </div>
-        </div>
+        <ul>
+          <li class="active">
+            <a href="index.html" title="Homepage"> home</a>
+          </li>
+          <li>
+            <a href="about.html" title="About prisnyak"> about</a>
+          </li>
+          <li>
+            <a href="projects.html" title="PMarina's work"> projects</a>
+          </li>
+          <li>
+            <a href="contack.html" title="Contact Marina"> contact me</a>
+          </li>
+        </ul>
       </nav>
+    </div>
+
+
+
+
+
+
+
+
+
+   
 
       <div class="hero text-center">
         <h2>
@@ -68,7 +80,7 @@
           Front-End Developer from Ukraine 🇺🇦
         </h3>
 
-      </div>
+     
     </div>
 
     <div class="container mt-5">
@@ -118,7 +130,7 @@
     <div class="container connect-me-rights text-center pd-">
       <div class="row">
         <div class="col"></div>
-        <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
+        <div class="col pb-3">©2022 Marina Prisnyak / All rights reserved</div>
         <div class="col"> </div>
       </div>
     </div>
