--- a/projects.html
+++ b/projects.html
@@ -75,13 +75,13 @@
           <a href="https://ambitna.netlify.app/" class="btn btn-branding-app m-5" target="_blank"
             title="Weather App by Marina Prisnyak">Weather App</a>
         </div>
-        <div class="col d-none d-lg-block">
+        <div class="col">
           <img src="images/weather.png" class="img-fluid" alt="" />
         </div>
 
       <div class="container mt-5">
           <div class="row">
-            <div class="col d-none d-lg-block">
+            <div class="col">
               <img src="images/book.png" class="img-fluid" alt="" />
             </div>
             <div class="col">
@@ -139,9 +139,7 @@
 
         <div class="container connect-me-rights text-center pd-">
             <div class="row">
-                <div class="col"></div>
                 <div class="col pb-3">©2022 Marina Prisnyak / All rights reserved</div>
-                <div class="col"> </div>
             </div>
         </div>
       
