--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
   <div class="container connect-me-rights text-center pd-">
       <div class="row">
           <div class="col"></div>
-          <div class="col pb-3">©2022 Marina Prisyak / All rights reserved</div>
+          <div class="col pb-3">©2022 Marina Prisnyak / All rights reserved</div>
           <div class="col"> </div>
       </div>
    </div>
