--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 
     <div class="container mt-5">
       <div class="row">
-        <div class="col">
+        <div class="col-md-6">
           <h1 class="header">Weather App</h1>
           <p>
             Take me to your team for the position of Trainee Frontend Developer. I promise to work hard, be diligent,
@@ -81,9 +81,7 @@
 
       <div class="container mt-5">
           <div class="row">
-            <div class="col">
-              <img src="images/book.png" class="img-fluid" alt="" />
-            </div>
+ 
             <div class="col">
               <h1 class="header">The Book</h1>
               <p>
@@ -92,8 +90,11 @@
               </p>
               <a href="https://ambitna.com.ua/riznibozhinku/" class="btn btn-branding-app m-5" target="_blank"
                 title="The book by Marina Prisnyak">The Book</a>
+            
           </div>
-
+          <div class="col-md-6">
+            <img src="images/book.png" class="img-fluid" alt="" />
+          </div>
 
             <div class="container mt-5">
               <div class="row">
@@ -105,7 +106,7 @@
                   <a href="https://ambitna.com.ua" class="btn btn-branding-app m-5" target="_blank"
                     title="Weather App by Marina Prisnyak">Go to Media</a>
                 </div>
-                <div class="col ">
+                <div class="col-md-6 ">
                   <img src="images/ambitna.png" class="img-fluid" alt="" />
                 </div>
               </div>
