--- a/about.html
+++ b/about.html
@@ -59,7 +59,10 @@
 
     <div class="container mt-5">
       <div class="row">
-        <div class="col d-none d-lg-block foto fluid">
+        <div class="col d-none d-md-block foto fluid">
+        </div>
+        <div class="col-md-6 d-block d-md-none">
+          <img src="images/portraite-b.png" class="img-fluid" alt="" />
         </div>
 
         <div class="col mb-5">
