--- a/contack.html
+++ b/contack.html
@@ -63,6 +63,14 @@
                 <div class="col d-none d-lg-block foto2 fluid">
                 </div>
 
+                <div class="container mt-5">
+                    <div class="row">
+                      <div class="col d-none d-md-block foto2 fluid">
+                      </div>
+                      <div class="col-md-6 d-block d-md-none">
+                        <img src="images/foto2-b.png" class="img-fluid" alt="" />
+                      </div>
+
                 <div class="col mb-5">
                     <h1 class="mb-5">Let's get in touch!</h1>
                     <div class="col mb-5">
