--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,19 @@
     </div>
 
 
-
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="header">Bread Academy</h1>
+          <p>
+            I learned to bake on my own. And, in fact, it was difficult. I wasted a lot of pain and time. And if it weren't for a man who believed in me and supported me, I would have given up on everything. But then a European woman took me by the hand and carefully led me through the bread lessons, teaching me the art of bread. Now I will do it with you. Because homemade bread is the best therapy and the best way to bring the family together.
+          </p>
+          <a href="https://academy.ambitna.com.ua/" class="btn btn-branding-app m-5" target="_blank"
+            title="Bread Academy by Marina Prisnyak">Bread Academy</a>
+        </div>
+        <div class="col">
+          <img src="images/bread.png" class="img-fluid" alt="" />
+        </div>
 
 
     <div class="container mt-5">
