--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container"></div>
     <div class="send-request m-3">Send me your request.
       And I'll develope you new awesome site</div>
-    <a href="index.html#contact" class="btn btn-branding mb-3">Contacts me</a>
+    <a href="index.html#contact" class="btn btn-branding mb-3">Contact me</a>
   
         <img src="images/foto-b.png" class="img-fluid mb-3 main-picture" alt="Marina Prisnyak" style="width:100%;" />
         
